--- a/about-us--sitarion-productions.html
+++ b/about-us--sitarion-productions.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=4047031439"/>
-  <link rel="stylesheet" type="text/css" href="css/about-us--sitarion-productions.css?crc=4247601878" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/about-us--sitarion-productions.css?crc=4159283201" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/gruppo:n4:all;poiret-one:n4:all;iceland:n4:all;strong:n4:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/iceland:n4:all;poiret-one:n4:all;gruppo:n4:all;strong:n4:all.js" type="text/javascript"></script>
    </head>
  <body>
 
@@ -66,9 +66,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <p>Main Game Programmer, Build Programmer (C++)</p>
       </div>
       <!-- /m_editable -->
+      <div class="colelem" id="u546"><!-- simple frame --></div>
      </div>
     </div>
-    <div class="colelem" id="u546"><!-- simple frame --></div>
     <div class="clearfix colelem" id="ppu1790"><!-- group -->
      <div class="clearfix grpelem" id="pu1790"><!-- column -->
       <div class="colelem" id="u1790"><!-- simple frame --></div>
@@ -87,7 +87,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <!-- m_editable region-id="editable-static-tag-U1988-BP_infinity" template="about-us--sitarion-productions.html" data-type="image" -->
      <div class="clip_frame grpelem" id="u1988" data-muse-uid="U1988" data-muse-type="img_frame"><!-- image -->
-      <img class="block" id="u1988_img" src="images/brzdj.png?crc=172339890" alt="" data-muse-src="images/brzdj.png?crc=172339890" data-heightwidthratio="1" data-image-width="212" data-image-height="212"/>
+      <img class="block" id="u1988_img" src="images/brzdj212x212.png?crc=172339890" alt="" data-muse-src="images/brzdj212x212.png?crc=172339890" data-heightwidthratio="1" data-image-width="212" data-image-height="212"/>
      </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U2005-BP_infinity" template="about-us--sitarion-productions.html" data-type="image" -->
@@ -99,7 +99,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="clearfix colelem" id="pu1967"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U1967-BP_infinity" template="about-us--sitarion-productions.html" data-type="image" -->
      <div class="clip_frame grpelem" id="u1967" data-muse-uid="U1967" data-muse-type="img_frame"><!-- image -->
-      <img class="block" id="u1967_img" src="images/brzdj.png?crc=172339890" alt="" data-muse-src="images/brzdj.png?crc=172339890" data-heightwidthratio="1" data-image-width="212" data-image-height="212"/>
+      <img class="block" id="u1967_img" src="images/brzdj212x212.png?crc=172339890" alt="" data-muse-src="images/brzdj212x212.png?crc=172339890" data-heightwidthratio="1" data-image-width="212" data-image-height="212"/>
      </div>
      <!-- /m_editable -->
      <div class="clearfix grpelem" id="pu1828"><!-- column -->
@@ -135,7 +135,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <!-- m_editable region-id="editable-static-tag-U1974-BP_infinity" template="about-us--sitarion-productions.html" data-type="image" -->
      <div class="clip_frame grpelem" id="u1974" data-muse-uid="U1974" data-muse-type="img_frame"><!-- image -->
-      <img class="block" id="u1974_img" src="images/brzdj.png?crc=172339890" alt="" data-muse-src="images/brzdj.png?crc=172339890" data-heightwidthratio="1" data-image-width="212" data-image-height="212"/>
+      <img class="block" id="u1974_img" src="images/brzdj212x212.png?crc=172339890" alt="" data-muse-src="images/brzdj212x212.png?crc=172339890" data-heightwidthratio="1" data-image-width="212" data-image-height="212"/>
      </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U2015-BP_infinity" template="about-us--sitarion-productions.html" data-type="image" -->
@@ -162,7 +162,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <!-- m_editable region-id="editable-static-tag-U1981-BP_infinity" template="about-us--sitarion-productions.html" data-type="image" -->
      <div class="clip_frame grpelem" id="u1981" data-muse-uid="U1981" data-muse-type="img_frame"><!-- image -->
-      <img class="block" id="u1981_img" src="images/brzdj.png?crc=172339890" alt="" data-muse-src="images/brzdj.png?crc=172339890" data-heightwidthratio="1" data-image-width="212" data-image-height="212"/>
+      <img class="block" id="u1981_img" src="images/brzdj212x212.png?crc=172339890" alt="" data-muse-src="images/brzdj212x212.png?crc=172339890" data-heightwidthratio="1" data-image-width="212" data-image-height="212"/>
      </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U1995-BP_infinity" template="about-us--sitarion-productions.html" data-type="image" -->
