--- a/news--sitarion-productions.html
+++ b/news--sitarion-productions.html
@@ -17,14 +17,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>News | Sitarion Productions</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=3917828592"/>
-  <link rel="stylesheet" type="text/css" href="css/news--sitarion-productions.css?crc=161421490" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=4047031439"/>
+  <link rel="stylesheet" type="text/css" href="css/news--sitarion-productions.css?crc=143028201" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/iceland:n4:all;geo:n4:all;iceberg:n4:all;gruppo:n4:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/geo:n4:all;iceland:n4:all;gruppo:n4:all;iceberg:n4:all.js" type="text/javascript"></script>
    </head>
  <body>
 
@@ -38,30 +38,68 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext clearfix grpelem" id="u235-4" href="about-us--sitarion-productions.html" data-href="page:U201" data-IBE-flags="txtStyleSrc"><!-- content --><p>ABOUT US</p></a>
      <div class="grpelem" id="u246"><!-- simple frame --></div>
     </div>
-    <div class="clearfix colelem" id="pu1028-4"><!-- group -->
+    <div class="clearfix colelem" id="ppu2071"><!-- group -->
+     <div class="clearfix grpelem" id="pu2071"><!-- column -->
+      <div class="colelem" id="u2071"><!-- simple frame --></div>
+      <div class="clearfix colelem" id="pu2076"><!-- group -->
+       <!-- m_editable region-id="editable-static-tag-U2076-BP_infinity" template="news--sitarion-productions.html" data-type="image" -->
+       <div class="clip_frame grpelem" id="u2076" data-muse-uid="U2076" data-muse-type="img_frame"><!-- image -->
+        <img class="block" id="u2076_img" src="images/jdd.gif?crc=3855680611" alt="" data-muse-src="images/jdd.gif?crc=3855680611" data-heightwidthratio="0.5795795795795796" data-image-width="333" data-image-height="193"/>
+       </div>
+       <!-- /m_editable -->
+       <div class="clearfix grpelem" id="pu2070"><!-- column -->
+        <div class="colelem" id="u2070" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="37" data-mu-ie-matrix-dy="-37"><!-- simple frame --></div>
+        <div class="colelem" id="u1039" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="37" data-mu-ie-matrix-dy="-37"><!-- simple frame --></div>
+       </div>
+      </div>
+     </div>
      <!-- m_editable region-id="editable-static-tag-U1028-BP_infinity" template="news--sitarion-productions.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
      <div class="clearfix grpelem" id="u1028-4" data-muse-uid="U1028" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-      <p>Welcome on our website!</p>
+      <p>Little update.</p>
      </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U1033-BP_infinity" template="news--sitarion-productions.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
      <div class="clearfix grpelem" id="u1033-4" data-muse-uid="U1033" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-      <p>28.05.2020</p>
+      <p>29.05.2020</p>
      </div>
      <!-- /m_editable -->
      <div class="grpelem" id="u1037"><!-- simple frame --></div>
-     <div class="grpelem" id="u1039" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="37" data-mu-ie-matrix-dy="-37"><!-- simple frame --></div>
-     <div class="grpelem" id="u1040" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="93" data-mu-ie-matrix-dy="-92"><!-- simple frame --></div>
+     <div class="grpelem" id="u1040" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="128" data-mu-ie-matrix-dy="-128"><!-- simple frame --></div>
      <!-- m_editable region-id="editable-static-tag-U1049-BP_infinity" template="news--sitarion-productions.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="clearfix grpelem" id="u1049-4" data-muse-uid="U1049" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-      <p>Hi! Here will be updates on our projects and more info about upcoming other things. Make sure to visit this page often!</p>
+     <div class="clearfix grpelem" id="u1049-7" data-muse-uid="U1049" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+      <p>Hi! On <a class="nonblock" href="index.html" data-href="page:U723">|Home Page|</a> you can find this gif which is from our upcoming game. We are pleased to annouce our new game, FPS Horror called &quot;Efile&quot;.</p>
      </div>
      <!-- /m_editable -->
      <div class="grpelem" id="u1054"><!-- simple frame --></div>
+     <div class="grpelem" id="u2083"><!-- simple frame --></div>
     </div>
+    <div class="colelem" id="u2067"><!-- simple frame --></div>
+    <div class="colelem" id="u2089"><!-- simple frame --></div>
     <div class="colelem" id="u1038"><!-- simple frame --></div>
+    <div class="clearfix colelem" id="pu2043-4"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U2043-BP_infinity" template="news--sitarion-productions.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <div class="clearfix grpelem" id="u2043-4" data-muse-uid="U2043" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+      <p>Welcome on our website!</p>
+     </div>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U2044-BP_infinity" template="news--sitarion-productions.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <div class="clearfix grpelem" id="u2044-4" data-muse-uid="U2044" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+      <p>28.05.2020</p>
+     </div>
+     <!-- /m_editable -->
+     <div class="grpelem" id="u2045"><!-- simple frame --></div>
+     <div class="grpelem" id="u2047" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="37" data-mu-ie-matrix-dy="-37"><!-- simple frame --></div>
+     <div class="grpelem" id="u2048" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="93" data-mu-ie-matrix-dy="-92"><!-- simple frame --></div>
+     <!-- m_editable region-id="editable-static-tag-U2049-BP_infinity" template="news--sitarion-productions.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <div class="clearfix grpelem" id="u2049-4" data-muse-uid="U2049" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+      <p>Hi! Here will be updates on our projects and more info about upcoming other things. Make sure to visit this page often!</p>
+     </div>
+     <!-- /m_editable -->
+     <div class="grpelem" id="u2050"><!-- simple frame --></div>
+    </div>
+    <div class="colelem" id="u2046"><!-- simple frame --></div>
    </div>
-   <div class="verticalspacer" data-offset-top="364" data-content-above-spacer="364" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="905" data-content-above-spacer="905" data-content-below-spacer="62" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="clearfix grpelem" id="pu522"><!-- column -->
     <div class="colelem" id="u522"><!-- simple frame --></div>
     <div class="clearfix colelem" id="u519-4" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- content -->
