--- a/projects--sitarion-productions.html
+++ b/projects--sitarion-productions.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Projects | Sitarion Productions</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=3917828592"/>
-  <link rel="stylesheet" type="text/css" href="css/projects--sitarion-productions.css?crc=307729769" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=4047031439"/>
+  <link rel="stylesheet" type="text/css" href="css/projects--sitarion-productions.css?crc=272532260" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -102,6 +102,41 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="grpelem" id="u1075" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="37" data-mu-ie-matrix-dy="-37"><!-- simple frame --></div>
     </div>
     <div class="colelem" id="u1061"><!-- simple frame --></div>
+    <!-- m_editable region-id="editable-static-tag-U2116-BP_infinity" template="projects--sitarion-productions.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext clip_frame colelem" id="u2116" href="pik--sitarion-productions.html" data-href="page:U2134" data-muse-uid="U2116" data-muse-type="img_frame"><!-- image --><img class="block" id="u2116_img" src="images/pik.jpg?crc=163713176" alt="" data-muse-src="images/pik.jpg?crc=163713176" data-heightwidthratio="0.5814696485623003" data-image-width="313" data-image-height="182"/></a>
+    <!-- /m_editable -->
+    <div class="clearfix colelem" id="pu2562"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U2562-BP_infinity" template="projects--sitarion-productions.html" data-type="image" -->
+     <div class="jd1 clip_frame grpelem" id="u2562" data-muse-uid="U2562" data-muse-type="img_frame"><!-- image -->
+      <img class="block" id="u2562_img" src="images/html5.png?crc=88883751" alt="" data-muse-src="images/html5.png?crc=88883751" data-heightwidthratio="1" data-image-width="15" data-image-height="15"/>
+     </div>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U2101-BP_infinity" template="projects--sitarion-productions.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <div class="clearfix grpelem" id="u2101-4" data-muse-uid="U2101" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+      <p>Polowniak i Kiep</p>
+     </div>
+     <!-- /m_editable -->
+    </div>
+    <!-- m_editable region-id="editable-static-tag-U2383-BP_infinity" template="projects--sitarion-productions.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext clip_frame colelem" id="u2383" href="jaskinia--sitarion-productions.html" data-href="page:U2472" data-muse-uid="U2383" data-muse-type="img_frame"><!-- image --><img class="block" id="u2383_img" src="images/brzdj-crop-u2383.png?crc=3886677696" alt="" data-muse-src="images/brzdj-crop-u2383.png?crc=3886677696" data-heightwidthratio="0.5814696485623003" data-image-width="313" data-image-height="182"/></a>
+    <!-- /m_editable -->
+    <div class="clearfix colelem" id="pu2359"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U2359-BP_infinity" template="projects--sitarion-productions.html" data-type="image" -->
+     <div class="jd3 clip_frame grpelem" id="u2359" data-muse-uid="U2359" data-muse-type="img_frame"><!-- image -->
+      <img class="block" id="u2359_img" src="images/winwhite.png?crc=122454962" alt="" data-muse-src="images/winwhite.png?crc=122454962" data-heightwidthratio="1" data-image-width="15" data-image-height="15"/>
+     </div>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U2362-BP_infinity" template="projects--sitarion-productions.html" data-type="image" -->
+     <div class="jd4 clip_frame grpelem" id="u2362" data-muse-uid="U2362" data-muse-type="img_frame"><!-- image -->
+      <img class="block" id="u2362_img" src="images/appwhite.png?crc=225188895" alt="" data-muse-src="images/appwhite.png?crc=225188895" data-heightwidthratio="1" data-image-width="15" data-image-height="15"/>
+     </div>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U2361-BP_infinity" template="projects--sitarion-productions.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <div class="clearfix grpelem" id="u2361-4" data-muse-uid="U2361" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+      <p>JASKINIA</p>
+     </div>
+     <!-- /m_editable -->
+    </div>
     <div class="clearfix colelem" id="pu774"><!-- group -->
      <div class="grpelem" id="u774"><!-- simple frame --></div>
      <!-- m_editable region-id="editable-static-tag-U780-BP_infinity" template="projects--sitarion-productions.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
