--- a/phone/projects.html
+++ b/phone/projects.html
@@ -17,14 +17,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>PROJECTS</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=428043807"/>
-  <link rel="stylesheet" type="text/css" href="css/projects.css?crc=3983162097" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=3932994943"/>
+  <link rel="stylesheet" type="text/css" href="css/projects.css?crc=3945156137" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/stint-ultra-expanded:n4:all;strong:n4:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/strong:n4:all;stint-ultra-expanded:n4:all.js" type="text/javascript"></script>
    </head>
  <body>
 
