--- a/about-us--sitarion-productions.html
+++ b/about-us--sitarion-productions.html
@@ -24,7 +24,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/iceland:n4:all;poiret-one:n4:all;gruppo:n4:all;strong:n4:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/strong:n4:all;gruppo:n4:all;iceland:n4:all;poiret-one:n4:all.js" type="text/javascript"></script>
    </head>
  <body>
 
