--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
-  <link media="only screen and (max-width: 370px)" rel="alternate" href="http://natsitarz.github.com/phone/index.html"/>
+  <link media="only screen and (max-width: 370px)" rel="alternate" href="https://sitarionproductions.github.io/phone/index.html"/>
   <title>Home Page | Sitarion Productions</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
@@ -30,18 +30,18 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/geostar:n4:all;wire-one:n4:all;gruppo:n4:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/gruppo:n4:all;geostar:n4:all;wire-one:n4:all.js" type="text/javascript"></script>
     <!--HTML Widget code-->
   
   <!-- Global Canonical -->
-  <link rel="canonical" href="http://natsitarz.github.com"/><meta property="og:url" content="http://natsitarz.github.com"/><script type="application/ld+json">{"@context": "http://schema.org","@type": "WebPage","url": "http://natsitarz.github.com",
+  <link rel="canonical" href="https://sitarionproductions.github.io"/><meta property="og:url" content="https://sitarionproductions.github.io"/><script type="application/ld+json">{"@context": "http://schema.org","@type": "WebPage","url": "https://sitarionproductions.github.io",
     "name": "Home Page | Sitarion Productions",
-    "image": "http://natsitarz.github.com/assets/bez-nazwy-1.png",
+    "image": "https://sitarionproductions.github.io/assets/bez-nazwy-1.png",
     "description": "Sitarion Productions - Indie Game Dev Studio. Check out our projects!"
   }
   </script>
   <!-- Facebook -->
-  <meta property="og:image" content="http://natsitarz.github.com/assets/bez-nazwy-1.png" />
+  <meta property="og:image" content="https://sitarionproductions.github.io/assets/bez-nazwy-1.png" />
   <meta property="og:image:width" content="1280"/><meta property="og:image:height" content="720"/>
   <meta property="og:description" content="Sitarion Productions - Indie Game Dev Studio. Check out our projects!" />
   <meta property="og:type" content="website"/>
@@ -54,10 +54,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:title" content="Home Page | Sitarion Productions" />
   <meta name="twitter:description" content="Sitarion Productions - Indie Game Dev Studio. Check out our projects!" />
-  <meta name="twitter:image" content="http://natsitarz.github.com/assets/bez-nazwy-1.png">
+  <meta name="twitter:image" content="https://sitarionproductions.github.io/assets/bez-nazwy-1.png">
   <!-- Fancy -->
   <meta property="fancy:name" content="Home Page | Sitarion Productions"/>
-  <meta property="fancy:images" content="http://natsitarz.github.com/assets/bez-nazwy-1.png"/>
+  <meta property="fancy:images" content="https://sitarionproductions.github.io/assets/bez-nazwy-1.png"/>
   <meta property="fancy:description" content="Sitarion Productions - Indie Game Dev Studio. Check out our projects!"/>
   <meta property="fancy:category" content="Media">
   <style>#u1952 {z-index:-1}</style>
