--- a/jaskinia--sitarion-productions.html
+++ b/jaskinia--sitarion-productions.html
@@ -24,7 +24,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/geostar:n4:all;geo:n4:all;dosis:n2:all;gruppo:n4:all;iceberg:n4:all;strong:n4:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/strong:n4:all;iceberg:n4:all;gruppo:n4:all;dosis:n2:all;geostar:n4:all;geo:n4:all.js" type="text/javascript"></script>
     <!--HTML Widget code-->
   
   <style>
