--- a/phone/news.html
+++ b/phone/news.html
@@ -24,7 +24,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/geo:n4:all;iceberg:n4:all;iceland:n4:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/iceberg:n4:all;iceland:n4:all;geo:n4:all.js" type="text/javascript"></script>
    </head>
  <body>
 
