--- a/projects--sitarion-productions.html
+++ b/projects--sitarion-productions.html
@@ -11,20 +11,20 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "projects--sitarion-productions.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "jquery.musepolyfill.bgsize.js", "projects--sitarion-productions.css"], "outOfDate":[]};
 </script>
   
   <title>Projects | Sitarion Productions</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_b-wzorcowa.css?crc=4047031439"/>
-  <link rel="stylesheet" type="text/css" href="css/projects--sitarion-productions.css?crc=272532260" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/projects--sitarion-productions.css?crc=3786140780" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/stint-ultra-expanded:n4:all;strong:n4:all;gruppo:n4:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/gruppo:n4:all;strong:n4:all;stint-ultra-expanded:n4:all.js" type="text/javascript"></script>
     <!--HTML Widget code-->
   
   <style>
@@ -117,9 +117,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <!-- /m_editable -->
     </div>
-    <!-- m_editable region-id="editable-static-tag-U2383-BP_infinity" template="projects--sitarion-productions.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext clip_frame colelem" id="u2383" href="jaskinia--sitarion-productions.html" data-href="page:U2472" data-muse-uid="U2383" data-muse-type="img_frame"><!-- image --><img class="block" id="u2383_img" src="images/brzdj-crop-u2383.png?crc=3886677696" alt="" data-muse-src="images/brzdj-crop-u2383.png?crc=3886677696" data-heightwidthratio="0.5814696485623003" data-image-width="313" data-image-height="182"/></a>
-    <!-- /m_editable -->
+    <div class="clearfix colelem" id="pu2383"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U2383-BP_infinity" template="projects--sitarion-productions.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext clip_frame grpelem" id="u2383" href="jaskinia--sitarion-productions.html" data-href="page:U2472" data-muse-uid="U2383" data-muse-type="img_frame"><!-- image --><img class="block" id="u2383_img" src="images/brzdj-crop-u2383.png?crc=3886677696" alt="" data-muse-src="images/brzdj-crop-u2383.png?crc=3886677696" data-heightwidthratio="0.5814696485623003" data-image-width="313" data-image-height="182"/></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U2600-BP_infinity" template="projects--sitarion-productions.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext museBGSize clip_frame grpelem" id="u2600" href="minecraft-modpack.html" data-href="page:U2599" data-muse-uid="U2600" data-muse-type="img_frame"><!-- image --><img class="block" id="u2600_img" src="images/2020-11-04_153134-crop-u2600.jpg?crc=4286661811" alt="" data-muse-src="images/2020-11-04_153134-crop-u2600.jpg?crc=4286661811" data-heightwidthratio="0.5814696485623003" data-image-width="313" data-image-height="182"/></a>
+     <!-- /m_editable -->
+    </div>
     <div class="clearfix colelem" id="pu2359"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U2359-BP_infinity" template="projects--sitarion-productions.html" data-type="image" -->
      <div class="jd3 clip_frame grpelem" id="u2359" data-muse-uid="U2359" data-muse-type="img_frame"><!-- image -->
@@ -134,6 +139,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <!-- m_editable region-id="editable-static-tag-U2361-BP_infinity" template="projects--sitarion-productions.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
      <div class="clearfix grpelem" id="u2361-4" data-muse-uid="U2361" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
       <p>JASKINIA</p>
+     </div>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U2610-BP_infinity" template="projects--sitarion-productions.html" data-type="image" -->
+     <div class="jd3 clip_frame grpelem" id="u2610" data-muse-uid="U2610" data-muse-type="img_frame"><!-- image -->
+      <img class="block" id="u2610_img" src="images/winwhite.png?crc=122454962" alt="" data-muse-src="images/winwhite.png?crc=122454962" data-heightwidthratio="1" data-image-width="15" data-image-height="15"/>
+     </div>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U2607-BP_infinity" template="projects--sitarion-productions.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <div class="clearfix grpelem" id="u2607-4" data-muse-uid="U2607" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+      <p>Minecraft Modpack</p>
      </div>
      <!-- /m_editable -->
     </div>
@@ -290,7 +305,7 @@ var suppressMissingFileError = false
 k[1]:null,k=k&&k[2]?k[2]:null;switch(k.toLowerCase()){case "css":i=i.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");g.className+=" "+i;i=a(d(g,"color"));k=a(d(g,"backgroundColor"));i!=0||k!=0?(Muse.assets.required.splice(j,1),"undefined"!=typeof b[l]&&(i!=b[l]>>>24||k!=(b[l]&16777215))&&Muse.assets.outOfDate.push(l)):j++;g.className="version";break;case "js":j++;break;default:throw Error("Unsupported file type: "+k);}}c?c().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 g.parentNode.removeChild(g);if(Muse.assets.outOfDate.length||Muse.assets.required.length)g="Brak niektórych plików na serwerze lub niektóre pliki na serwerze są nieprawidłowe. Wyczyść pamięć podręczną przeglądarki i spróbuj ponownie. Jeśli problem nie zniknie, skontaktuj się z autorem witryny.",f&&Muse.assets.outOfDate.length&&(g+="\nOut of date: "+Muse.assets.outOfDate.join(",")),f&&Muse.assets.required.length&&(g+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(g+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(g)):alert(g)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){f(!0)},5E3):f()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch"],function(c){var $ = c;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musepolyfill.bgsize","jquery.watch"],function(c){var $ = c;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
